# tsumeshogi-crawler

./: pyproject.toml
tsumeshogi_crawler/: __init__.py  crawler.py
