[tool.poetry]
name = "tsumeshogi-crawler"
version = "0.1.0"
description = ""
authors = ["sugyan <sugi1982@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
types-beautifulsoup4 = "^4.11.3"
black = "^22.6.0"
flake8 = "^4.0.1"
mypy = "^0.961"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
